初步引入三类基本模型

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,7 @@
+# Python
+.ipynb_checkpoints/
+.venv
+
 ## Core latex/pdflatex auxiliary files:
 *.aux
 *.lof
@@ -324,6 +328,3 @@ TSWLatexianTemp*
 # option is specified. Footnotes are the stored in a file with suffix Notes.bib.
 # Uncomment the next line to have this generated file ignored.
 #*Notes.bib
-
-# jupyter notebook
-.ipynb_checkpoints/
